src/test/deca/syntax/invalid/declVar-notInTheBeginning.synt
declVar-notInTheBeginning.deca:4: